# file-explorer

./: .gitignore  .gitmodules  CMakeLists.txt  Display.cpp  Display.hpp  FileDisplay.cpp  FileDisplay.hpp  FileExplorerDisplay.cpp  FileInfoDisplay.hpp  FileViewerDisplay.hpp  ImGui.sln  ImGui.vcxproj  ImGui.vcxproj.filters  ImGuiInclude.hpp  InfoDisplay.cpp  InfoDisplay.hpp  MenuBar.cpp  MenuBar.hpp  README.md  ViewerDisplay.cpp  ViewerDisplay.hpp  Window.cpp  Window.hpp  imgui.ini  main.cpp  main.hpp
FileExplorer/x64/Debug/: FileExplorer.exe.recipe  vc143.idb
FileExplorer/x64/Debug/FileExplorer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FileExplorer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ImGui/x64/Debug/: vc143.idb
ImGui/x64/Debug/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: FileExplorerDisplay.hpp  FileInfoDisplay.cpp  FileViewerDisplay.cpp  ImGuiInclude.hpp  MenuBar.hpp  main.hpp
x64/Debug/: ImGui.exe.recipe  ImGui.vcxproj.FileListAbsolute.txt  main.obj.enc  vc143.idb
x64/Debug/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
